--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    compile('mysql:mysql-connector-java')
+
+    implementation 'junit:junit:4.12'
 }
 
 test {
