Configurations and dependencies updated

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.1.RELEASE'
+    id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
 }
@@ -27,6 +27,10 @@ dependencies {
     compile('mysql:mysql-connector-java')
 
     implementation 'junit:junit:4.12'
+
+    compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
+
+    compile('com.google.code.gson:gson:2.8.2')
 }
 
 test {
