--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# BACKEND SERVER PORT CONFIGURATION
+server.port=8081
+
 # DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
@@ -5,3 +8,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/medical_clinic?serverTimezone=Europe/Warsaw&useSSL=False
 spring.datasource.username=medical_clinic
 spring.datasource.password=Medical_Clinic
+
+# EMAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mailnapotrzebykursu@gmail.com
+spring.mail.password=Voldemort
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+covid.api.endpoint.prod=https://covid-19-data.p.rapidapi.com
+covid.api.key=97abdb595dmshe7592a9c777c977p1bf774jsn1efa121f1add
+
+google.calendar.endpoint=https://www.googleapis.com/calendar/v3
+google.calendar.key= AIzaSyB9Ch8EFyweydnH-ViCnQb2lGF2SFnGt5k 
