H2 database configuration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # BACKEND SERVER PORT CONFIGURATION
 server.port=8081
 
-# DATABASE CONFIGURATION
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/medical_clinic?serverTimezone=Europe/Warsaw&useSSL=False
-spring.datasource.username=medical_clinic
-spring.datasource.password=Medical_Clinic
+# MYSQL DATABASE CONFIGURATION
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database=mysql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/medical_clinic?serverTimezone=Europe/Warsaw&useSSL=False
+#spring.datasource.username=medical_clinic
+#spring.datasource.password=Medical_Clinic
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
@@ -16,3 +16,11 @@ spring.mail.username=mailnapotrzebykursu@gmail.com
 spring.mail.password=Voldemort
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# H2 DATABASE CONFIGURATION
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
