--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 
     compile('com.google.code.gson:gson:2.8.2')
+
+    runtimeOnly 'com.h2database:h2'
 }
 
 test {
